# Backend-Migration

./: .gitignore  CHANGELOG.md  Makefile  _claude.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: deps.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: audit_log.py  health_check.py  loan_application.py  loan_payment.py  notification.py  otp_code.py  property_image.py
backend/app/routers/: audit_logs.py  health.py  loan_payments.py  notifications.py  otp_codes.py  property_images.py
backend/app/schemas/: audit_log.py  loan_payment.py  notification.py  otp_code.py  property_image.py
backend/reports/: integration-report.html  integration-report.xml  security-audit.html  security-audit.xml
backend/scripts/: run_tests_with_reports.sh
backend/tests/: conftest.py
backend/tests/integration/: test_all_endpoints_in_process.py  test_all_microservices.py  test_audit_logs_integration.py  test_loan_payment_endpoints.py  test_loan_payment_integration.py  test_property_images_integration.py
backend/tests/security/: test_auth_security_audit.py
backend/tests/unit/: test_audit_log_router.py  test_config.py  test_database.py  test_health_router.py  test_loan_payment_logic.py  test_loan_payment_router.py  test_main.py  test_notification_router.py  test_otp_code_router.py  test_property_image_router.py  test_security.py
docs/: cutover-strategy.md
docs/api/: data-management.md  openapi-data-management.yaml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ApiExplorer.tsx  DataTable.tsx  Header.tsx  LoadingSpinner.tsx  Modal.tsx  PropertyCard.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  endpoints.ts  types.ts  utils.ts
scripts/: cutover.sh  decommission.sh
