[project]
name = "chiron-backend"
version = "0.1.0"
description = "Chiron Test — FastAPI backend (Phase 0 Foundation)"
authors = [
    {name = "Chiron Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "email-validator (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
httpx = ">=0.27.0,<1.0.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests that require a running database (deselect with '-m not integration')",
]


[tool.coverage.run]
source = ["app"]
omit = ["app/core/database.py", "app/core/config.py"]


[tool.coverage.report]
show_missing = true
fail_under = 80
